--- a/packages/sutpc-site/package.json
+++ b/packages/sutpc-site/package.json
@@ -5,13 +5,14 @@
 	"type": "module",
 	"main": "src/index.js",
 	"scripts": {
-		"build": "node build.mjs"
+		"build": "zx build.mjs"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"zx": "^7.1.1",
-		"magicast": "^0.2.2"
+		"zx": "^7.2.3",
+		"magicast": "^0.2.10",
+		"zip-a-folder": "2.0.0"
 	}
 }
